# e-chauffeur

./: .gitignore  .gitlab-ci.yml  .gitmodules  docker-compose.yml  environment.env.j2  package-lock.json  package.json  playbook.yml
backup-image/date-filter/src/: main.rs
docs/: README.md  flux.md  infrastructure.md  rights.md  setup.md  technologies.md
docs/.vuepress/: config.js
docs/infrastructure/: main.dot
docs/setup/: projects.dot
kubernetes/: README.md  namespace.yml
kubernetes/backup-image/: .gitignore  Dockerfile
kubernetes/backup-image/date-filter/: Cargo.toml
kubernetes/helm/: consul.yml  gitlab-runner.yml  grafana-certificate.yml.dist  grafana-custom.yml.dist  grafana.yml  mongodb.yml  prometheus-operator-custom.yml.dist  prometheus-operator.yml  traefik.yml
kubernetes/helm/acme-issuer/: Chart.yaml  values.yaml
kubernetes/helm/acme-issuer/templates/: letsencrypt-prod.yaml  letsencrypt-staging.yaml  self-signing.yaml
kubernetes/helm/backup/: Chart.yaml  values.yaml
kubernetes/helm/backup/templates/: _helpers.tpl  cr-backup.yaml  cr-clean-old.yaml  cron-job.yaml
kubernetes/helm/clean-db/: Chart.yaml  values.yaml
kubernetes/helm/clean-db/templates/: _helpers.tpl  cron-job.yaml
kubernetes/helm/redirect/: Chart.yaml  values.yaml
kubernetes/helm/redirect/templates/: NOTES.txt  deployment.yaml  ingress.yaml
traefik/: traefik.toml.j2
