[package]
name = "date-filter"
version = "0.1.0"
description = "Little tool to filter date in input following some builtin rules!"
authors = ["Gaël Demette <gael.demette+git@qonfucius.team>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.0"
chrono = "~0.4.10"